--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,5 +7,5 @@
       <%= post.body %>
     </p>
 
-    <%= link_to "Delete", post_path(post), method: :delete, :class => 'btn btn-danger' %>
+    <%= button_to "Delete", post_path(post), method: :delete, :class => 'btn btn-danger' %>
   <% end %>
