--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.body %></p>
     <%= link_to "Edit", edit_post_path, :class => 'btn btn-primary' %>
-    <%= link_to "Delete", post_path(@post), method: :delete, :class => 'btn btn-danger' %>
+    <%= button_to "Delete", post_path(@post), method: :delete, :class => 'btn btn-danger' %>
